--- a/wwr/style/river.css
+++ b/wwr/style/river.css
@@ -1,4 +1,3 @@
-
 .home-grid {
     display: block;
     height: auto;
@@ -15,7 +14,7 @@
 }
 
 body {
-    background-color: #fcfdfd; 
+    
     font-family: Raleway, Arial, sans-serif;
     font-size: 22px;
     margin: 0;
@@ -142,6 +141,7 @@ h2 {
 .button-box {
     text-align: center;
     text-decoration: none;
+    padding-bottom: 5%;
 } 
 
 .rivers-card {
@@ -150,7 +150,7 @@ h2 {
     text-decoration: none;
     margin: 200px 0;
     margin: 50px auto;
-    width: 70%;
+    
    
 } 
 
@@ -160,7 +160,7 @@ h2 {
     text-decoration: none;
     margin: 200px 0;
     margin: 50px auto;
-    width: 70%;
+    
 } 
 
 .rapids-card {
@@ -169,20 +169,6 @@ h2 {
     text-decoration: none;
     margin: 200px 0;
     margin: 50px auto;
-    width: 70%;
-} 
-
-.mountains {
-    
-    padding: 25px 0px;
-    padding-top: 0px;
-    width: 45%;
-    padding-bottom: 0px;
-    grid-column: 2/7;
-    grid-row: 5/8;
-    box-shadow: 5px 5px 10px #6f7364;
-    display: block;
-    margin: 0 auto;
     
 } 
 
@@ -192,7 +178,7 @@ h2 {
     background-color:rgba(20,30,13, .7);
     line-height: 1.5em;
     padding: 30px;
-    padding-bottom: 15px;
+    padding-bottom: 50px;
     padding: 25px 50px;
     padding-top: 15px;
     max-width: 50%;
@@ -205,31 +191,18 @@ h2 {
     
 } 
 
-.join {
-    background-color: #d9c2a3;
-    color: black;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 15px 30px;
-    margin-top: 50px;
-    border-radius: 5px;
-} 
+
 
 .card-img {
-    border: 10px solid #d9c2a3;
-    width: 25%;
+    
+    width: 20%;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
+    
+    
 }
 
-.card-img:hover {
-    opacity: .6;
-    transform: scale(1.1);
-}
 
-main section img {
-    box-sizing: border-box;
-}
 
 footer a {
     text-decoration: none;
@@ -263,84 +236,3 @@ footer  {
     margin: 0 auto; 
     
 }  
-
-
-
-
-
-form {
-    /* Center the form on the page */
-    margin: 0 auto;
-    width: 400px;
-    /* Form outline */
-    padding: 1em;
-    border: 1px solid #ccc;
-    border-radius: 1em;
-    background: rgb(209, 184, 150);
-    align-items: center;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  form li + li {
-    margin-top: 1em;
-  }
-  
-  label {
-    /* Uniform size & alignment */
-    display: inline-block;
-    width: 90px;
-    text-align: right;
-  }
-  
-  input,
-  textarea {
-    /* To make sure that all text fields have the same font settings
-       By default, textareas have a monospace font */
-    font: 1em sans-serif;
-  
-    /* Uniform text field size */
-    width: 300px;
-    box-sizing: border-box;
-  
-    /* Match form field borders */
-    border: 1px solid #999;
-  }
-  
-  input:focus,
-  textarea:focus {
-    /* Additional highlight for focused elements */
-    border-color: #000;
-  }
-  
-  textarea {
-    /* Align multiline text fields with their labels */
-    vertical-align: top;
-  
-    /* Provide space to type some text */
-    height: 5em;
-  }
-  
-  .button {
-    /* Align buttons with the text fields */
-    padding-left: 90px; /* same size as the label elements */
-    
-  }
-  
-  button {
-    /* This extra margin represent roughly the same space as the space
-       between the labels and their text fields */
-    margin-left: 0.5em;
-    
-  }
-
-
-
-
-   
-
-       
