--- a/psp/styles/about.css
+++ b/psp/styles/about.css
@@ -1,10 +1,27 @@
 header {
-    width: 100%;
-    height: 60px;
+    
     background-color:rgba(79, 138, 110, 0.7);
     padding: 1em;
-    text-align: center;
+    grid-template-columns: 200px auto;
+    display: grid;
+    margin: 0 auto;
+}
+#logo_link {
+  padding-top: 5px;
+  justify-self: center;
+  align-self: center;
+}
+
+.logo {
+  height: 55px;
+  padding-top: 5px;
   
+}
+body {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 2em;
+  font-size: 18px;
 }
 p {
     font-family: var(--paragraph-font);
@@ -17,23 +34,21 @@ h1, h2, h3 {
     color: var(--headline-color-on-white);
     padding: 1em;
   }
-nav {
-    background-color: var(--nav-background-color);
-    line-height: 3em;
-    text-align: center;
-    font-size: 1.2em;
-  }
   nav  {
     list-style-type: none;
     display: flex;
-  
+    float: right;
+    padding-top: 1px;
+  padding-right: 30px;
+  padding-bottom: 0px;
+  padding-left: 0px;
   }
   nav a {
     padding:1em;
     min-width: 120px;
     text-decoration: none;
     padding: 10px;
-  
+    
   }
   nav a:link, nav a:visited {
     color: var(--nav-link-color);
@@ -53,32 +68,46 @@ figure {
     border: 1px solid black;
     background-color: rgb(53, 109, 90);
 }
-img {
+.picture {
     width: 30%;
     box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 25px;
     
 }
-#booking {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+
+
+  .fb {
+    float: right;
+    padding: 1px 10px;
+    width: 3%;
+    
+    
   }
-  
-  #booking td, #booking th {
-    border: 1px solid #ddd;
-    padding: 8px;
+  .social {
+    padding-top: 1px;
+    
+}
+
+footer a {
+    text-decoration: none;
+    color: rgb(10, 10, 10);
+    font-size: 30px;
+    padding:1em;
+    min-width: 120px;
+    text-decoration: none;
+    padding: 10px;
   }
-  
-  #booking tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #booking tr:hover {background-color: #ddd;}
-  
-  #booking th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #7e4343;
-    color: white;
-  }
+
+footer  {
+  width: 98%;
+  height: 75px;
+  background-color: rgba(79, 138, 110, 0.7);
+  padding: 25px;
+  padding: 1em;
+
+}  
+
+
+
+
  
