--- a/psp/styles/site-plan.css
+++ b/psp/styles/site-plan.css
@@ -5,10 +5,12 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #00c5df   ;
+  --secondary-color: #136b7a ;
+  --accent1-color: #3db2ff;
+  --accent2-color: #1d4158;
+  
+
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Architects Daughter";
@@ -39,6 +41,7 @@ body {
 img {
   display: block;
   margin: 0 auto;
+  width: 35%;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
@@ -141,21 +144,7 @@ nav a:hover {
   text-align: center;
 
 }
-.sm-home {
-  grid-area: home;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page2 {
-  grid-area: page2;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page3 {
-  grid-area: page3;
-  background-color: #ccc;
-  line-height: 3em;
-}
+
 
 .top {
   grid-area: top;
