--- a/psp/styles/trip.css
+++ b/psp/styles/trip.css
@@ -1,41 +1,47 @@
 header {
-    width: 98%;
-    height: 60px;
-    background-color:rgba(79, 138, 110, 0.7);
-    padding: 1em;
     
-    
+  background-color:rgba(79, 138, 110, 0.7);
+  padding: 1em;
+  grid-template-columns: 200px auto;
+  display: grid;
+  margin: 0 auto;
+}
+#logo_link {
+padding-top: 5px;
+justify-self: center;
+align-self: center;
 }
 
+.logo {
+height: 55px;
+padding-top: 5px;
 
+}
+  body {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 2em;
+  font-size: 18px;  
+  }
   p {
     font-family: var(--paragraph-font);
     color: var(--paragraph-color-on-white);
     padding: 1em;
   }
-
-h1, h2, h3 {
+  h1, h2, h3 {
     font-family: var(--heading-font);
     color: var(--headline-color-on-white);
     padding: 1em;
   }
-nav {
-    background-color: var(--nav-background-color);
-    line-height: 3em;
-    text-align: center;
-    font-size: 1.2em;
-  }
   nav  {
     list-style-type: none;
     display: flex;
-  
   }
   nav a {
     padding:1em;
     min-width: 120px;
     text-decoration: none;
     padding: 10px;
-  
   }
   nav a:link, nav a:visited {
     color: var(--nav-link-color);
@@ -44,10 +50,12 @@ nav {
     color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
   }
-section {
+  section {
+    margin: 50px;
     border: 1px solid black;
     background-color: rgb(148, 223, 198);
-}
+    width: 95%
+  }
 table nav a {
     
     color: rgb(16, 24, 21);
@@ -56,7 +64,7 @@ figure {
     border: 1px solid black;
     background-color: rgb(53, 109, 90);
 }
-img {
+.picture {
     width: 30%;
     box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 25px;
@@ -65,7 +73,8 @@ img {
 #booking {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 90%;
+    margin: 70px;
   }
   
   #booking td, #booking th {
@@ -84,3 +93,33 @@ img {
     background-color: #7e4343;
     color: white;
   }
+  .fb {
+    float: right;
+    padding: 1px 10px;
+    width: 3%;
+    
+    
+  }
+  .social {
+    padding-top: 1px;
+    
+}
+
+footer a {
+    text-decoration: none;
+    color: rgb(10, 10, 10);
+    font-size: 30px;
+    padding:1em;
+    min-width: 120px;
+    text-decoration: none;
+    padding: 10px;
+  }
+
+footer  {
+  width: 98%;
+  height: 75px;
+  background-color: rgba(79, 138, 110, 0.7);
+  padding: 25px;
+  padding: 1em;
+
+}  
